<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Advance Wars</string>
    <string name="single_player_button">Single Player</string>
    <string name="multiplayer_button">Multiplayer</string>
    <string name="settings_button">Settings</string>
    <string name="main_menu_title">Main Menu</string>
    <string name="about_button">About</string>
    <string name="scores_button">Scores</string>
    <string name="welcome_title">Welcome To Advance Wars</string>
    <string name="new_player_button">Enter New Player Name</string>
    <string name="previous_player_button">Select Player Name</string>
    <string name="about_title">About Advance Wars</string>
    <string name="about_description">Advance Wars game by Team ZuluXtreme 73.</string>
    <string name="single_player_title">Single Player</string>
    <string name="multiplayer_title">Multiplayer</string>
    <string name="tutorial_button">Tutorial</string>
    <string name="quick_match_button">Quick Match</string>
    <string name="campaign_button">Campaign</string>
    <string name="create_mp_game_button">Create a Game</string>
    <string name="connect_to_mp_game_button">Connect to a Game</string>
    <string name="multiplayer_options_button">Multiplayer Options</string>
    <string name="under_construction_title">Oops!</string>
    <string name="under_construction_description">We are sorry. This screen has not been implemented yet.</string>
    <string name="enter_player_name_title">Enter Player Name</string>
    <string name="faction_selection_title">Select Your Faction</string>
    <string name="leader_board_title">Scores</string>
    <string name="map_selection_title">Select Battle Map</string>
    <string name="multiplayer_options_title">Multiplayer Options</string>
    <string name="settings_title">Settings</string>
    <string name="select_player_name_title">Select Player Name</string>
    <string name="new_player_name_button">Enter New Player Name</string>
    <string name="authors">Dan Ayotte; Roger Mo; Matt Tyndall; Austin Padilla; Sinisa Malbasa</string>
    <string name="invalid_player_name_entered_title">Entered Player Name Is Invalid</string>
    <string name="invalid_player_name_selected_title">Cannot Select Player Name</string>
    <string name="invalid_player_name_entered_description">This may be because the player name already exists or the field is blank. Please try again.</string>
    <string name="invalid_player_name_selected_description">Player name cannot be selected because there are no saved player names. Try entering a new player name first.</string>
    <string name="select_player_name_description">Select an existing player name:</string>
    <string name="select_player_button">Confirm Player Name</string><string name="main_menu_welcome">Welcome To Advance Wars</string><string-array name="player_names">
        <item>Billy</item>
        <item>Mandy</item>
        <item>Sally</item>
    </string-array>
    <string name="change_player_name_button">Change Player Name</string>
    <string name="sound_on_radio_button">On</string>
    <string name="difficulty">Set AI difficulty:</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="sound">Set in-game sounds:</string>
    <string name="sound_off_radio_button">Off</string>
    <string name="faction_selection_description">Please select your faction:</string>
    <string name="map_selection_description">Please select battle map:</string>
    <string name="faction_selection_button">Select Faction</string>
    <string-array name="factions">
        <item>Blue</item>
        <item>Red</item>
    </string-array>
    <string-array name="maps">
        <item>Map 1</item>
        <item>Map 2</item>
        <item>Map 3</item>
    </string-array>
    <string name="map_selection_button">Select Map</string>
    <string-array name="in_game_menu">
        <item >End Turn</item>
        <item >Save Game</item>
        <item >Quit Game</item>
    </string-array>
    <string name="change_player_name_title">Change Current Player Name</string>
    <string name="change_player_name_button_2">Change Player Name</string>
    <string name="move_unit_button">Move</string>
    <string name="attack_unit_button">Attack</string>
    <string name="capture_building_button">Capture</string>
    <string name="create_unit_button">Create Unit</string>
    <string name="unit_info_button">Unit Info</string>
    <string name="unit_info_screen_title">Unit Info</string>
    <string name="end_turn_button">End Turn</string>
    <string name="save_game_button">Save Current Game</string>
    <string name="quit_game_button">Quit Current Game</string>
    <string name="infantry_unit_button">Infantry\n[$1000]</string>
    <string name="mech_unit_button">Mech\n[$3000]</string>
    <string name="recon_unit_button">Recon\n[$4000]</string>
    <string name="artillery_unit_button">Artillery\n[$6000]</string>
    <string name="anti_air_unit_button">Anti-Air\n[$6000]</string>
    <string name="chopper_unit_button">Chopper\n[$7000]</string>
    <string name="tank_unit_button">Tank\n[$7000]</string>
    <string name="rockets_unit_button">Rockets\n[$12000]</string>
    <string name="medium_tank_unit_button">Med Tank\n[$14000]</string>
    <string name="fighter_jet_unit_button">Fighter Jet\n[$15000]</string>
    <string name="heavy_tank_unit_button">Heavy Tank\n[$24000]</string>
    <string name="bomber_unit_button">Bomber\n[$26000]</string>
    <string name="unit_name">UNIT_NAME_NOT_SET</string>
    <string name="unit_health">UNIT_HEALTH_NOT_SET</string>
    <string name="unit_move_range">UNIT_MOVE_RANGE_NOT_SET</string>
    <string name="unit_attack">UNIT_ATTACK_NOT_SET</string>    
    <string name="unit_attack_range">UNIT_ATTACK_RANGE_NOT_SET</string>
    <string name="unit_armor">UNIT_ARMOR_NOT_SET</string>
    <string name="unit_ammo">UNIT_AMMO_NOT_SET</string>
    <string name="unit_owner">UNIT_FUEL_NOT_SET</string>
    <string name="available_money">MONEY_VALUE_NOT_AVAILABLE</string>
    <string name="about_description_2">Based on the Advance Wars game created by Intelligent Systems for the Game Boy Advance handheld.</string>
    <string name="about_copyright_notice">Unit graphics are copyrighted by Nintendo. Background music is copyrighted by Creative Assembly and Activision. All rights reserved.</string>
        
        
            
    
    
</resources>
